// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`immutable-data > typescript > options > ignoreNonConstDeclarations > report parameters 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 3,
      "endColumn": 16,
      "endLine": 2,
      "line": 2,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 19,
      "endLine": 3,
      "line": 3,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 11,
      "endLine": 4,
      "line": 4,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 11,
      "endLine": 5,
      "line": 5,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 11,
      "endLine": 6,
      "line": 6,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 11,
      "endLine": 7,
      "line": 7,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 11,
      "endLine": 8,
      "line": 8,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 12,
      "endLine": 9,
      "line": 9,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 12,
      "endLine": 10,
      "line": 10,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 13,
      "endLine": 11,
      "line": 11,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 11,
      "endLine": 12,
      "line": 12,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 11,
      "endLine": 13,
      "line": 13,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 11,
      "endLine": 14,
      "line": 14,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 12,
      "endLine": 15,
      "line": 15,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 13,
      "endLine": 16,
      "line": 16,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 16,
      "endLine": 17,
      "line": 17,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 8,
      "endLine": 18,
      "line": 18,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 8,
      "endLine": 19,
      "line": 19,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 8,
      "endLine": 20,
      "line": 20,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 3,
      "endColumn": 8,
      "endLine": 21,
      "line": 21,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 14,
      "endLine": 22,
      "line": 22,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 7,
      "endColumn": 12,
      "endLine": 23,
      "line": 23,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
  ],
  "output": "function y(x: {a: 1, b: object}) {
  x.foo = "bar";
  x["foo"] = "bar";
  x.a += 1;
  x.a -= 1;
  x.a *= 1;
  x.a /= 1;
  x.a %= 1;
  x.a <<= 1;
  x.a >>= 1;
  x.a >>>= 1;
  x.a &= 1;
  x.a |= 1;
  x.a ^= 1;
  x.a **= 1;
  delete x.a;
  delete x["a"];
  x.a++;
  x.a--;
  ++x.a;
  --x.a;
  if (x.a = 2) {}
  if (x.a++) {}
  Object.assign(x, { c: "world" });
  Object.assign(x.b, { c: "world" });
  Object.defineProperties(x, { d: { value: 2, writable: false }});
  Object.defineProperty(x, "e", { value: 3, writable: false });
  Object.setPrototypeOf(x, null);
}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 3,
          "endColumn": 16,
          "endLine": 2,
          "line": 2,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 19,
          "endLine": 3,
          "line": 3,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 11,
          "endLine": 4,
          "line": 4,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 11,
          "endLine": 5,
          "line": 5,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 11,
          "endLine": 6,
          "line": 6,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 11,
          "endLine": 7,
          "line": 7,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 11,
          "endLine": 8,
          "line": 8,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 12,
          "endLine": 9,
          "line": 9,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 12,
          "endLine": 10,
          "line": 10,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 13,
          "endLine": 11,
          "line": 11,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 11,
          "endLine": 12,
          "line": 12,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 11,
          "endLine": 13,
          "line": 13,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 11,
          "endLine": 14,
          "line": 14,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 12,
          "endLine": 15,
          "line": 15,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 13,
          "endLine": 16,
          "line": 16,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 16,
          "endLine": 17,
          "line": 17,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 8,
          "endLine": 18,
          "line": 18,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 8,
          "endLine": 19,
          "line": 19,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 8,
          "endLine": 20,
          "line": 20,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 3,
          "endColumn": 8,
          "endLine": 21,
          "line": 21,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 7,
          "endColumn": 14,
          "endLine": 22,
          "line": 22,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 7,
          "endColumn": 12,
          "endLine": 23,
          "line": 23,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
      ],
      "output": "function y(x: {a: 1, b: object}) {
  x.foo = "bar";
  x["foo"] = "bar";
  x.a += 1;
  x.a -= 1;
  x.a *= 1;
  x.a /= 1;
  x.a %= 1;
  x.a <<= 1;
  x.a >>= 1;
  x.a >>>= 1;
  x.a &= 1;
  x.a |= 1;
  x.a ^= 1;
  x.a **= 1;
  delete x.a;
  delete x["a"];
  x.a++;
  x.a--;
  ++x.a;
  --x.a;
  if (x.a = 2) {}
  if (x.a++) {}
  Object.assign(x, { c: "world" });
  Object.assign(x.b, { c: "world" });
  Object.defineProperties(x, { d: { value: 2, writable: false }});
  Object.defineProperty(x, "e", { value: 3, writable: false });
  Object.setPrototypeOf(x, null);
}",
    },
  ],
}
`;

exports[`immutable-data > typescript > options > ignoreNonConstDeclarations > report variables declared as const 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 14,
      "endLine": 2,
      "line": 2,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 17,
      "endLine": 3,
      "line": 3,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 4,
      "line": 4,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 5,
      "line": 5,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 6,
      "line": 6,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 7,
      "line": 7,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 8,
      "line": 8,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 9,
      "line": 9,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 10,
      "line": 10,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 11,
      "endLine": 11,
      "line": 11,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 12,
      "line": 12,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 13,
      "line": 13,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 14,
      "line": 14,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 15,
      "line": 15,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 11,
      "endLine": 16,
      "line": 16,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 14,
      "endLine": 17,
      "line": 17,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 6,
      "endLine": 18,
      "line": 18,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 6,
      "endLine": 19,
      "line": 19,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 6,
      "endLine": 20,
      "line": 20,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 6,
      "endLine": 21,
      "line": 21,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 12,
      "endLine": 22,
      "line": 22,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 10,
      "endLine": 23,
      "line": 23,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
  ],
  "output": "const x = {a: 1, b:{}};
x.foo = "bar";
x["foo"] = "bar";
x.a += 1;
x.a -= 1;
x.a *= 1;
x.a /= 1;
x.a %= 1;
x.a <<= 1;
x.a >>= 1;
x.a >>>= 1;
x.a &= 1;
x.a |= 1;
x.a ^= 1;
x.a **= 1;
delete x.a;
delete x["a"];
x.a++;
x.a--;
++x.a;
--x.a;
if (x.a = 2) {}
if (x.a++) {}
Object.assign(x, { c: "world" });
Object.assign(x.b, { c: "world" });
Object.defineProperties(x, { d: { value: 2, writable: false }});
Object.defineProperty(x, "e", { value: 3, writable: false });
Object.setPrototypeOf(x, null);",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 14,
          "endLine": 2,
          "line": 2,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 17,
          "endLine": 3,
          "line": 3,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 4,
          "line": 4,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 5,
          "line": 5,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 6,
          "line": 6,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 7,
          "line": 7,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 8,
          "line": 8,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 9,
          "line": 9,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 10,
          "line": 10,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 11,
          "endLine": 11,
          "line": 11,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 12,
          "line": 12,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 13,
          "line": 13,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 14,
          "line": 14,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 15,
          "line": 15,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 11,
          "endLine": 16,
          "line": 16,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 14,
          "endLine": 17,
          "line": 17,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 6,
          "endLine": 18,
          "line": 18,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 6,
          "endLine": 19,
          "line": 19,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 6,
          "endLine": 20,
          "line": 20,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 6,
          "endLine": 21,
          "line": 21,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 12,
          "endLine": 22,
          "line": 22,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 10,
          "endLine": 23,
          "line": 23,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
      ],
      "output": "const x = {a: 1, b:{}};
x.foo = "bar";
x["foo"] = "bar";
x.a += 1;
x.a -= 1;
x.a *= 1;
x.a /= 1;
x.a %= 1;
x.a <<= 1;
x.a >>= 1;
x.a >>>= 1;
x.a &= 1;
x.a |= 1;
x.a ^= 1;
x.a **= 1;
delete x.a;
delete x["a"];
x.a++;
x.a--;
++x.a;
--x.a;
if (x.a = 2) {}
if (x.a++) {}
Object.assign(x, { c: "world" });
Object.assign(x.b, { c: "world" });
Object.defineProperties(x, { d: { value: 2, writable: false }});
Object.defineProperty(x, "e", { value: 3, writable: false });
Object.setPrototypeOf(x, null);",
    },
  ],
}
`;

exports[`immutable-data > typescript > report object mutating patterns 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 14,
      "endLine": 2,
      "line": 2,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 17,
      "endLine": 3,
      "line": 3,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 4,
      "line": 4,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 5,
      "line": 5,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 6,
      "line": 6,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 7,
      "line": 7,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 8,
      "line": 8,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 9,
      "line": 9,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 10,
      "line": 10,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 11,
      "endLine": 11,
      "line": 11,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 12,
      "line": 12,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 13,
      "line": 13,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 9,
      "endLine": 14,
      "line": 14,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 10,
      "endLine": 15,
      "line": 15,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 11,
      "endLine": 16,
      "line": 16,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 14,
      "endLine": 17,
      "line": 17,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 6,
      "endLine": 18,
      "line": 18,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 6,
      "endLine": 19,
      "line": 19,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 6,
      "endLine": 20,
      "line": 20,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 6,
      "endLine": 21,
      "line": 21,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 12,
      "endLine": 22,
      "line": 22,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 10,
      "endLine": 23,
      "line": 23,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
  ],
  "output": "var x = {a: 1};
x.foo = "bar";
x["foo"] = "bar";
x.a += 1;
x.a -= 1;
x.a *= 1;
x.a /= 1;
x.a %= 1;
x.a <<= 1;
x.a >>= 1;
x.a >>>= 1;
x.a &= 1;
x.a |= 1;
x.a ^= 1;
x.a **= 1;
delete x.a;
delete x["a"];
x.a++;
x.a--;
++x.a;
--x.a;
if (x.a = 2) {}
if (x.a++) {}
var y = x.a;
var z = x["a"];
if (x.a && y.a) {}
var w = ~x.a;
if (!x.a) {}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 14,
          "endLine": 2,
          "line": 2,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 17,
          "endLine": 3,
          "line": 3,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 4,
          "line": 4,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 5,
          "line": 5,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 6,
          "line": 6,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 7,
          "line": 7,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 8,
          "line": 8,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 9,
          "line": 9,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 10,
          "line": 10,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 11,
          "endLine": 11,
          "line": 11,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 12,
          "line": 12,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 13,
          "line": 13,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 9,
          "endLine": 14,
          "line": 14,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 10,
          "endLine": 15,
          "line": 15,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 11,
          "endLine": 16,
          "line": 16,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 14,
          "endLine": 17,
          "line": 17,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 6,
          "endLine": 18,
          "line": 18,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 6,
          "endLine": 19,
          "line": 19,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 6,
          "endLine": 20,
          "line": 20,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 6,
          "endLine": 21,
          "line": 21,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 12,
          "endLine": 22,
          "line": 22,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 10,
          "endLine": 23,
          "line": 23,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
      ],
      "output": "var x = {a: 1};
x.foo = "bar";
x["foo"] = "bar";
x.a += 1;
x.a -= 1;
x.a *= 1;
x.a /= 1;
x.a %= 1;
x.a <<= 1;
x.a >>= 1;
x.a >>>= 1;
x.a &= 1;
x.a |= 1;
x.a ^= 1;
x.a **= 1;
delete x.a;
delete x["a"];
x.a++;
x.a--;
++x.a;
--x.a;
if (x.a = 2) {}
if (x.a++) {}
var y = x.a;
var z = x["a"];
if (x.a && y.a) {}
var w = ~x.a;
if (!x.a) {}",
    },
  ],
}
`;

exports[`immutable-data > typescript > reports Object.assign() on identifiers 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 9,
      "endColumn": 44,
      "endLine": 3,
      "line": 3,
      "message": "Modifying properties of existing object not allowed.",
      "messageId": "object",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 9,
      "endColumn": 48,
      "endLine": 4,
      "line": 4,
      "message": "Modifying properties of existing object not allowed.",
      "messageId": "object",
      "ruleId": "immutable-data",
      "severity": 2,
    },
  ],
  "output": "var x = { msg1: "hello", obj: { a: 1, b: 2} };

var a = Object.assign(x, { msg2: "world" });
var b = Object.assign(x.obj, { msg2: "world" });",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 9,
          "endColumn": 44,
          "endLine": 3,
          "line": 3,
          "message": "Modifying properties of existing object not allowed.",
          "messageId": "object",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 9,
          "endColumn": 48,
          "endLine": 4,
          "line": 4,
          "message": "Modifying properties of existing object not allowed.",
          "messageId": "object",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
      ],
      "output": "var x = { msg1: "hello", obj: { a: 1, b: 2} };

var a = Object.assign(x, { msg2: "world" });
var b = Object.assign(x.obj, { msg2: "world" });",
    },
  ],
}
`;

exports[`immutable-data > typescript > reports field mutation in class methods 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 5,
      "endColumn": 17,
      "endLine": 9,
      "line": 9,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 5,
      "endColumn": 17,
      "endLine": 10,
      "line": 10,
      "message": "Modifying an existing object/array is not allowed.",
      "messageId": "generic",
      "ruleId": "immutable-data",
      "severity": 2,
    },
  ],
  "output": "class Klass {
  bar = 1;

  constructor() {
    this.baz = "hello";
  }

  zoo() {
    this.bar = 2;
    this.baz = 3;
  }
}",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 5,
          "endColumn": 17,
          "endLine": 9,
          "line": 9,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 5,
          "endColumn": 17,
          "endLine": 10,
          "line": 10,
          "message": "Modifying an existing object/array is not allowed.",
          "messageId": "generic",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
      ],
      "output": "class Klass {
  bar = 1;

  constructor() {
    this.baz = "hello";
  }

  zoo() {
    this.bar = 2;
    this.baz = 3;
  }
}",
    },
  ],
}
`;

exports[`immutable-data > typescript > reports object mutating methods 1`] = `
{
  "fixed": false,
  "messages": [
    {
      "column": 1,
      "endColumn": 66,
      "endLine": 2,
      "line": 2,
      "message": "Modifying properties of existing object not allowed.",
      "messageId": "object",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 63,
      "endLine": 3,
      "line": 3,
      "message": "Modifying properties of existing object not allowed.",
      "messageId": "object",
      "ruleId": "immutable-data",
      "severity": 2,
    },
    {
      "column": 1,
      "endColumn": 33,
      "endLine": 4,
      "line": 4,
      "message": "Modifying properties of existing object not allowed.",
      "messageId": "object",
      "ruleId": "immutable-data",
      "severity": 2,
    },
  ],
  "output": "var foo = { a: 1 };
Object.defineProperties(foo, { b: { value: 2, writable: false }});
Object.defineProperty(foo, "c", { value: 3, writable: false });
Object.setPrototypeOf(foo, null);",
  "steps": [
    {
      "fixed": false,
      "messages": [
        {
          "column": 1,
          "endColumn": 66,
          "endLine": 2,
          "line": 2,
          "message": "Modifying properties of existing object not allowed.",
          "messageId": "object",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 63,
          "endLine": 3,
          "line": 3,
          "message": "Modifying properties of existing object not allowed.",
          "messageId": "object",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
        {
          "column": 1,
          "endColumn": 33,
          "endLine": 4,
          "line": 4,
          "message": "Modifying properties of existing object not allowed.",
          "messageId": "object",
          "ruleId": "rule-to-test/immutable-data",
          "severity": 2,
        },
      ],
      "output": "var foo = { a: 1 };
Object.defineProperties(foo, { b: { value: 2, writable: false }});
Object.defineProperty(foo, "c", { value: 3, writable: false });
Object.setPrototypeOf(foo, null);",
    },
  ],
}
`;
